<resources>
    <string name="version_name">Versão: 1.0.5</string>
    <string name="app_name">Calculadora Penal</string>
    <string name="banner_ad_unit_id">ca-app-pub-1231118493223046/7399466815</string>
    <string name="year_main">Anos</string>
    <string name="month_main">Meses</string>
    <string name="day_main">Dias</string>
    <string name="days_fine_main">Dias Multa</string>
    <string name="main_button_add">Adicionar</string>
    <string name="clear_button">Limpar pena</string>
    <string name="app_logo">App Logo on the toolbar</string>

    <string name="delete_dialog_message">Deletar operação?</string>
    <string name="delete">Deletar</string>
    <string name="cancel">Cancelar</string>

    <string name="fraction_dialog_text">Selecine a alteração da pena</string>
    <string name="fraction_button">Adicionar</string>
    <string name="list_button_ok">Calcular</string>
    <string name="list_button_clear">Limpar</string>
    <string name="fraction_dialog_title">Selecione a fração</string>

    <string name="sentence_dialog_title">Selecione a pena</string>
    <string name="year_text">Ano</string>
    <string name="month_text">Mês</string>
    <string name="day_text">Dia</string>
    <string name="sentence_button_text">Adicionar</string>

    <string name="remove_dialog_message">Deseja remover operação?</string>
    <string name="remove_dialog_ok">Sim</string>
    <string name="remove_dialog_cancel">Cancelar</string>

    <string name="menu_about">Sobre Nós</string>

    <string name="waiting">Carregando...</string>

    <string name="days_fine_hint">0</string>
    <string name="operation_hint">Descrição</string>

    <string name="toast_add_sentence">Defina a pena inicial</string>

    <!--Used to populate the spinner-->
    <string-array name="operations_array">
        <item>+</item>
        <item>-</item>
    </string-array>

    <string name="ambar_address">ambar.tech</string>
       <string name="about_us_text">Ambar fornece um espectro completo de serviços de softwares
    personalizados, com foco em aplicações mobile e web. Oferecemos serviços em todos os estágios do
    ciclo de desenvolvimento de software: de análise de negócio, design e protótipo até desenvolvimento,
    garantia de qualidade, manutenção e apoio.
     </string>

</resources>
