<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/activity_about"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context="com.release.android.calculadorapenal.About"
    android:orientation="vertical">
    <View
        android:layout_width="match_parent"
        android:layout_height="24dp"
        android:background="@color/colorPrimaryDark"/>

    <android.support.v7.widget.Toolbar
        android:id="@+id/toolbar_about"
        android:layout_width="match_parent"
        android:layout_height="?attr/actionBarSize"
        style="@style/ThemeOverlay.AppCompat"
        android:background="@color/colorPrimary"
        android:elevation="4dp">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:orientation="horizontal">

            <ImageButton
                android:layout_width="24dp"
                android:paddingLeft="12dp"
                android:paddingRight="12dp"
                android:layout_height="match_parent"
                android:layout_marginRight="20dp"
                android:contentDescription="@string/app_logo"
                android:src="@drawable/ic_arrow_back_24px"
                android:background="@android:color/transparent"
                android:onClick="startMA"/>

            <TextView
                style="@style/ToolbarText"
                android:layout_width="0dp"
                android:layout_height="match_parent"
                android:layout_weight="1"
                android:gravity="center_vertical"
                android:text="@string/menu_about"
                android:textColor="@color/white" />


            <ImageButton
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_gravity="center_vertical"
                android:layout_marginRight="4dp"
                android:background="@null"
                android:padding="12dp"
                android:onClick="showBuy"
                android:src="@drawable/ic_monetization_on_24px" />
        </LinearLayout>

    </android.support.v7.widget.Toolbar>

    <TextView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_margin="16dp"
        android:textSize="48dp"
        android:text="@string/ambar_address"
        android:gravity="center_horizontal"
        android:textStyle="bold"/>

    <TextView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_margin="16dp"
        android:text="@string/about_us_text"
        android:gravity="fill_horizontal"/>

</LinearLayout>
