<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="wrap_content"
    android:layout_height="wrap_content"
    android:layout_margin="16dp"
    android:orientation="vertical">

    <LinearLayout
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_gravity="center">

        <RelativeLayout
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginRight="24dp"
            android:layout_marginTop="10dp">

            <TextView
                android:id="@+id/title_year"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_centerHorizontal="true"
                android:text="@string/year_text" />

            <com.shawnlin.numberpicker.NumberPicker
                android:id="@+id/year_sentence"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_below="@id/title_year"
                app:np_dividerColor="@color/colorPrimary"
                app:np_height="160dp"
                app:np_max="30"
                app:np_min="0"
                app:np_orientation="vertical"
                app:np_textColor="@color/colorPrimary"
                app:np_textSize="16sp"
                app:np_width="54dp" />
        </RelativeLayout>

        <RelativeLayout
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginRight="24dp"
            android:layout_marginTop="10dp">

            <TextView
                android:id="@+id/title_month"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_centerHorizontal="true"
                android:text="@string/month_text" />

            <com.shawnlin.numberpicker.NumberPicker
                android:id="@+id/month_sentence"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_below="@id/title_month"
                app:np_dividerColor="@color/colorPrimary"
                app:np_height="160dp"
                app:np_max="12"
                app:np_min="0"
                app:np_orientation="vertical"
                app:np_textColor="@color/colorPrimary"
                app:np_textSize="16sp"
                app:np_width="54dp" />
        </RelativeLayout>

        <RelativeLayout
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginRight="24dp"
            android:layout_marginTop="10dp">

            <TextView
                android:id="@+id/title_day"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_centerHorizontal="true"
                android:text="@string/day_text" />


            <com.shawnlin.numberpicker.NumberPicker
                android:id="@+id/day_sentence"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_below="@id/title_day"
                app:np_dividerColor="@color/colorPrimary"
                app:np_height="160dp"
                app:np_max="30"
                app:np_min="0"
                app:np_orientation="vertical"
                app:np_textColor="@color/colorPrimary"
                app:np_textSize="16sp"
                app:np_width="54dp" />
        </RelativeLayout>


    </LinearLayout>


    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="10dp"
        android:orientation="vertical">
        <View
            android:layout_width="match_parent"
            android:layout_height="1dp"
            android:layout_marginBottom="4dp"
            android:background="@color/colorPrimary"/>
        <TextView
            android:id="@+id/title_days_fine"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="center"
            android:text="@string/days_fine_main" />
        <View
            android:layout_width="match_parent"
            android:layout_height="1dp"
            android:layout_marginTop="4dp"
            android:background="@color/colorPrimary"/>

        <EditText
            android:padding="12dp"
            android:id="@+id/days_fine_sentence"
            android:layout_width="wrap_content"
            android:layout_height="0dp"
            android:layout_gravity="center"
            android:layout_weight="1"
            android:hint="@string/days_fine_hint"
            android:inputType="number"
            android:textColor="@color/colorPrimary"
            android:textSize="16sp"
            android:maxLength="3"/>


    </LinearLayout>

    <Button
        android:id="@+id/sentence_button"
        android:layout_gravity="end"
        android:padding="12dp"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="8dp"
        android:background="@null"
        android:text="@string/sentence_button_text"
        android:textColor="@color/button_blue"
        android:textStyle="bold" />
</LinearLayout>